--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   },
   "author": "Mark Vander Lugt",
   "license": "Apache-2.0",
+  "dependencies": {
+    "@mvanderlugt/electron-wrapper": "^1.3.0",
+    "electron-squirrel-startup": "^1.0.0"
+  },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.63",
     "@electron-forge/maker-deb": "^6.0.0-beta.63",
@@ -20,10 +24,8 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
     "@electron-forge/maker-zip": "^6.0.0-beta.63",
     "@electron-forge/plugin-webpack": "~6.0.0-beta.63",
-    "@mvanderlugt/electron-wrapper": "^1.1.0",
-    "@types/electron": "^1.6.10",
-    "electron": "~19.0.4",
-    "typescript": "^4.7.3"
+    "electron": "^21.2.0",
+    "typescript": "^4.8.4"
   },
   "config": {
     "forge": {
@@ -46,8 +48,5 @@
         }
       ]
     }
-  },
-  "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
   }
 }
